Added CRC5, CRC12-3GPP, and CRC15, along with adding preparations to re-add Greenkeeper.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "favorites.sortDirection": "ASC",
-  "favorites.groupsFirst": true,
-  "editor.formatOnSave": true
+    "favorites.sortDirection": "ASC",
+    "favorites.groupsFirst": true,
+    "editor.formatOnSave": true,
+    "html.suggest.angular1": false,
+    "html.suggest.ionic": false
 }
