--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
   "license": "MIT",
   "dependencies": {
     "buffer": "^5.1.0"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "mocha"
+    ]
   }
 }
