--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "beautify-benchmark": "^0.2.4",
     "benchmark": "^2.1.4",
     "buffer-crc32": "^0.2.13",
-    "chai": "^4.1.2",
-    "eslint": "^5.1.0",
-    "eslint-config-airbnb": "^17.0.0",
+    "chai": "^4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.10.0",
-    "mocha": "^5.2.0",
-    "prettier": "^1.13.7",
+    "eslint-plugin-react": "^7.12.4",
+    "mocha": "^6.0.2",
+    "prettier": "^1.16.4",
     "seedrandom": "^3.0.1"
   },
   "homepage": "https://github.com/alexgorbatchev/node-crc",
@@ -48,11 +48,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "buffer": "^5.1.0"
-  },
-  "greenkeeper": {
-    "ignore": [
-      "mocha"
-    ]
+    "buffer": "^5.2.1"
   }
 }
