--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "beautify-benchmark": "^0.2.4",
     "benchmark": "^2.1.4",
     "buffer-crc32": "^0.2.13",
